fix: У класса LinkedList есть метод removeFirst() - он удаляет первый элемент списка